--- a/PPTX_and_stats/Chi-square.ipynb
+++ b/PPTX_and_stats/Chi-square.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "ab72217f",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "id": "c503f27b",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "{'p': 0.3029966133373402, 'chi_sq': 2.3880673012794396, 'df': 2}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "id": "a322b67d",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "Power_divergenceResult(statistic=array([1.52380952, 0.03225806, 3.2189781 ]), pvalue=array([0.21704391, 0.85746244, 0.07278906]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "id": "d14f69af",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
     "    k1=kurtosis(l1,fisher=True,bias=False) # This replicates Minitab result\n",
     "    k2=kurtosis(l2,fisher=True,bias=False)\n",
     "    res={\"u1\":u1,\"u2\":u2,\"s1\":s1,\"s2\":s2,\"n1\":n1,\"n2\":n2,\"k1\":k1,\"k2\":k2}\n",
-    "    print(k1,k2)\n",
+    "#     print(k1,k2)\n",
     "    \n",
     "    f=var1/var2\n",
     "    dfn,dfd=n1-1,n2-1\n",
@@ -235,7 +235,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
+   "id": "1afa644b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Population stdev: 1.00\n",
+      "Sampled stdev: 2.83\n",
+      "df = 5\n",
+      "chi square = 40.00\n",
+      "Prob of variation is bigger than the sample. p = 0.00\n",
+      "Lower %2.5 Chi square = 0.83  Top %2.5 Chi square = 12.83\n",
+      "%95 confidence range of stdev: (0.41, 1.60), when sampling 6 times from a population with stdev of 1.00.\n",
+      "%95 confidence range of the population stdev: (1.77, 6.94), where the samples came from.\n",
+      "%95 confidence the population stdev lower than 5.91, where the samples came from.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'p': 1.4933679004514033e-07,\n",
+       " 'chi_sq': 40.0,\n",
+       " 'stdev': 2.8284271247461903,\n",
+       " 'df': 5,\n",
+       " '95_chi2_range': (0.8312116134866625, 12.832501994030027),\n",
+       " '95_range_from_P': (0.40772824613623776, 1.6020300867355786),\n",
+       " 'n': 6,\n",
+       " '95_range_from_S': (1.7655268450729373, 6.937039931741945),\n",
+       " 'std_from_S_high95': 5.909312478819359}"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "single_pop_var_test([6,8,5,12,4,7],1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "e702e6a9",
    "metadata": {},
    "outputs": [],
@@ -244,6 +288,7 @@
     "#         Robustness: \n",
     "#             The Brown-Forsythe and O'Brien tests are generally considered the most robust, \n",
     "#         followed by Levene's test, with the F-test being the least robust to violations of normality.\n",
+    "#         \n",
     "#         Power: \n",
     "#             Under normal distributions, the F-test is most powerful, followed by Levene's test, \n",
     "#         then Brown-Forsythe. However, for non-normal distributions, the robust tests often outperform the F-test.\n",
@@ -298,24 +343,36 @@
     "        Zij=[[abs(v-stat.median(l)) for v in l] for l in data]\n",
     "        return one_way_anova(Zij)\n",
     "    \n",
+    "    res={\"OBrien\":OBrien(data)}\n",
+    "    res[\"Levene\"]=Levene(data)\n",
+    "    res[\"Brown_Forsythe\"]=Brown_Forsythe(data)\n",
     "    \n",
+    "    if print_out:\n",
+    "        print(\"O'Brien[.5]       p = %.3f\"%res[\"OBrien\"][\"p\"])\n",
+    "        print(\"Levene            p = %.3f\"%res[\"Levene\"][\"p\"])\n",
+    "        print(\"Brown-Forsythe    p = %.3f\"%res[\"Brown_Forsythe\"][\"p\"])\n",
     "    \n",
-    "    print(OBrien(data))\n",
-    "    print(Levene(data))\n",
-    "    print(Brown_Forsythe(data))\n",
-    "    print(one_way_anova(data))\n",
+    "    return res\n",
     "\n",
-    "    \n",
-    "two_pop_var_test = several_tests_stdev_2sided\n",
-    "#\n",
+    "############## \n",
     "# 从两个population取样，测试这两个population的\n",
     "# 波动一致的可能性\n",
-    "#######################"
+    "#######################\n",
+    "\n",
+    "def two_pop_var_test(l1,l2,print_out=True):\n",
+    "    res=multi_pop_var_test([l1,l2],print_out=print_out)\n",
+    "    res2=several_tests_stdev_2sided(l1,l2,print_out=False)\n",
+    "    if print_out:\n",
+    "        print(\"2 Sided F test    p = %.3f\"%res2[\"F\"][\"p\"])\n",
+    "    res[\"F\"]=res2[\"F\"]\n",
+    "    \n",
+    "    return res\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "id": "955bda97",
    "metadata": {},
    "outputs": [
@@ -323,11 +380,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'F': 1.8004084379279677, 'p': 0.18321371309574186}\n",
-      "{'F': 2.912713411934891, 'p': 0.07035135639975054}\n",
-      "{'F': 2.2631127916162725, 'p': 0.12209372894437731}\n",
-      "{'F': 5.138920138474558, 'p': 0.012292232701970107}\n"
+      "O'Brien[.5]       p = 0.183\n",
+      "Levene            p = 0.070\n",
+      "Brown-Forsythe    p = 0.122\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'OBrien': {'F': 1.8004084379279677, 'p': 0.18321371309574186},\n",
+       " 'Levene': {'F': 2.912713411934891, 'p': 0.07035135639975054},\n",
+       " 'Brown_Forsythe': {'F': 2.2631127916162725, 'p': 0.12209372894437731}}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -336,6 +404,43 @@
     "    [859.8, 1102.2, 747.0, 829.0, 1082.0, 412.0, 681.1, -639.3, 3758.0] ]\n",
     "\n",
     "multi_pop_var_test(data_by_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8436adf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O'Brien[.5]       p = 0.689\n",
+      "Levene            p = 0.341\n",
+      "Brown-Forsythe    p = 0.304\n",
+      "2 Sided F test    p = 0.641\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'OBrien': {'F': 0.16223944354545908, 'p': 0.6893602011212521},\n",
+       " 'Levene': {'F': 0.9302037240268874, 'p': 0.3409080010281452},\n",
+       " 'Brown_Forsythe': {'F': 1.0850529201248762, 'p': 0.3041521269368428},\n",
+       " 'F': {'f': 1.2337311950447138, 'p': 0.6406340501617611, 'dfn': 17, 'dfd': 21}}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "females = [95, 123, 74, 145, 64, 112, 107, 67, 81, 91, 142, 84, 85, 92, 112, 112, 115, 116]\n",
+    "males = [84, 128, 79, 98, 105, 95, 79, 93, 99, 119, 92, 112, 99, 113, 128, 111, 105, 104, 106, 128, 134, 172]\n",
+    "\n",
+    "two_pop_var_test(females,males)"
    ]
   },
   {
