--- a/PPTX_and_stats/continuous dist plots.ipynb
+++ b/PPTX_and_stats/continuous dist plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "id": "8d610625",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,11 @@
     "import numpy as np\n",
     "\n",
     "def cont_dist(dist=None,pvalue=None,x=None,print_out=True, plot_out=False,\n",
-    "              plot_tail=0.001, **kwargs):\n",
-    "            \n",
+    "              plot_tail=0.001, p=None, **kwargs):\n",
+    "    \n",
+    "    if pvalue is None and p is not None:\n",
+    "        pvalue=p\n",
+    "    \n",
     "    def process(rv,pvalue,x,print_out):\n",
     "        res=dict()\n",
     "\n",
@@ -110,6 +113,98 @@
     "    if dist_s==\"t\":\n",
     "        return process(stats.t(kwargs[\"df\"]),\n",
     "                      pvalue,x,print_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d8e1308a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean = 1.00\tvariance = 2.00\tstdev=1.41\n",
+      "skewness coefficient = 2.83\tkurtosis coefficient = 12.00\n",
+      "PDF at x = 5.060 is 0.014.\n",
+      "Left tail till x acc. prob. is 0.976.\n",
+      "Right tail from x acc. prob. is 0.024.\n",
+      "Equal tail at two sides \n",
+      "Left at 0.001, acc. prob is 0.024.\n",
+      "Right at 5.060, acc. prob is 0.024.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'mean': 1.0,\n",
+       " 'var': 2.0,\n",
+       " 'skew': 2.8284271247461903,\n",
+       " 'kurt': 12.0,\n",
+       " 'stdev': 1.4142135623730951,\n",
+       " 'px': 0.014127644830304953,\n",
+       " 'left_acc_p': 0.9755157620009135,\n",
+       " 'right_acc_p': 0.0244842379990865,\n",
+       " 'equal_tail': {'x_left': 0.000941953393383038,\n",
+       "  'x_right': 5.06,\n",
+       "  'acc_p_left': 0.0244842379990865,\n",
+       "  'acc_p_right': 0.0244842379990865}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cont_dist(dist=\"chi2\",df=1,x=5.06)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9aa4d0a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean = 5.00\tvariance = 10.00\tstdev=3.16\n",
+      "skewness coefficient = 1.26\tkurtosis coefficient = 2.40\n",
+      "PDF at x = 5.710 is 0.104.\n",
+      "Left tail till x acc. prob. is 0.665.\n",
+      "Right tail from x acc. prob. is 0.335.\n",
+      "Equal tail at two sides \n",
+      "Left at 3.230, acc. prob is 0.335.\n",
+      "Right at 5.710, acc. prob is 0.335.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'mean': 5.0,\n",
+       " 'var': 10.0,\n",
+       " 'skew': 1.2649110640673518,\n",
+       " 'kurt': 2.4,\n",
+       " 'stdev': 3.1622776601683795,\n",
+       " 'px': 0.10443167111473882,\n",
+       " 'left_acc_p': 0.6645325620353357,\n",
+       " 'right_acc_p': 0.3354674379646643,\n",
+       " 'equal_tail': {'x_left': 3.230273119876288,\n",
+       "  'x_right': 5.71,\n",
+       "  'acc_p_left': 0.3354674379646643,\n",
+       "  'acc_p_right': 0.3354674379646643}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cont_dist(dist=\"chi2\",df=5,x=5.71)"
    ]
   },
   {
