--- a/PPTX_and_stats/normality.ipynb
+++ b/PPTX_and_stats/normality.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "25662f20",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "735e67a5",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "[10, 10, 10, 9.9, 8.25, 5.5, 2.75, 1.1, 1, 1, 1]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "9ec1ca60",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "[23.2, 23.2, 23.2, 22.62, 21.2, 20.5, 19.25, 18.65, 16.5, 16.5, 16.5]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "473f4946",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "cda6253c",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
+   "id": "12b93308",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ShapiroResult(statistic=0.9754997491836548, pvalue=0.6623572707176208)\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=shapiro(np.array(data))\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "2839d235",
    "metadata": {},
    "outputs": [
@@ -280,6 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(0.31178790623822294, 0.5332248653089934)\n",
       "Anderson-Darling statistic: 0.31178790623822294\n",
       "p-value: 0.5332248653089934\n"
      ]
