--- a/PPTX_and_stats/t-test ANOVA.ipynb
+++ b/PPTX_and_stats/t-test ANOVA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2808d590",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e91a1e29",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,9 @@
     "def paired_t_test(l1,l2,print_out=True):\n",
     "    diff=[i-j for i,j in zip(l1,l2)]\n",
     "    res=t_test_1sample(diff,0,print_out=False)\n",
+    "#     If p < alpha (e.g., p < 0.05): Reject the null hypothesis. \n",
+    "# There is strong evidence of a significant difference between the \n",
+    "# paired measurements.\n",
     "    if print_out:\n",
     "        print(\"Paired difference:\")\n",
     "        print(\"   mean = %.2f\"%res[\"mean\"])\n",
@@ -57,6 +60,91 @@
     "    return res\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0df94283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paired difference:\n",
+      "   mean = 0.00\n",
+      "   stdev = 0.01\n",
+      "   t = 5.19\n",
+      "   df = 85.00\n",
+      "   Two-tailed test p=0.00\n",
+      "   %95 range of the difference's mean: (0.00, 0.01)\n",
+      "mean = 0.08\n",
+      "stdev = 0.05\n",
+      "t = 5.08\n",
+      "df = 85.00\n",
+      "Two-tailed test p=0.00\n",
+      "%95 range of population mean which the samples came from: (0.07, 0.09)\n",
+      "mean = 0.07\n",
+      "stdev = 0.06\n",
+      "t = 4.10\n",
+      "df = 85.00\n",
+      "Two-tailed test p=0.00\n",
+      "%95 range of population mean which the samples came from: (0.06, 0.09)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chi2 = [0.0522, 0.0512, 0.0487, 0.095, 0.0898, 0.093, 0.2524, 0.2436, 0.2582, 0.055, 0.0522, 0.0491, 0.0812, 0.087, 0.0784, 0.19, 0.1976, 0.196, 0.0493, 0.0497, 0.0498, 0.075, 0.076, 0.0756, 0.1601, 0.1616, 0.1596, 0.0476, 0.0515, 0.0481, 0.0515, 0.0533, 0.0495, 0.0488, 0.0508, 0.0518, 0.0528, 0.0474, 0.1621, 0.1627, 0.1682, 0.0524, 0.0507, 0.052, 0.0513, 0.0468, 0.0539, 0.1324, 0.1233, 0.1269, 0.0526, 0.0468, 0.0527, 0.0522, 0.0497, 0.0492, 0.1064, 0.1054, 0.1025, 0.0497, 0.0526, 0.0504, 0.0508, 0.0527, 0.0474, 0.0491, 0.0502, 0.0531, 0.0506, 0.0519, 0.0497, 0.0522, 0.046, 0.0541, 0.054, 0.0503, 0.0476, 0.0503, 0.0477, 0.0499, 0.0514, 0.0512, 0.0488, 0.0524, 0.0514, 0.0464]\n",
+    "jmp = [0.0405, 0.0395, 0.039, 0.098, 0.0968, 0.0933, 0.2479, 0.2436, 0.2592, 0.0445, 0.0414, 0.0409, 0.0824, 0.085, 0.0785, 0.1965, 0.1973, 0.1956, 0.0442, 0.0389, 0.0406, 0.0722, 0.0731, 0.0727, 0.1608, 0.1614, 0.162, 0.0302, 0.0346, 0.0329, 0.0463, 0.0492, 0.0323, 0.0312, 0.0317, 0.0533, 0.0512, 0.0499, 0.1682, 0.1675, 0.1747, 0.0359, 0.0371, 0.0363, 0.0476, 0.0477, 0.0511, 0.136, 0.1248, 0.1281, 0.0384, 0.0358, 0.0392, 0.051, 0.0519, 0.0501, 0.1093, 0.1066, 0.1041, 0.0364, 0.0402, 0.0382, 0.0448, 0.0478, 0.042, 0.0573, 0.0552, 0.0579, 0.04, 0.0402, 0.0382, 0.0479, 0.0462, 0.0495, 0.0551, 0.0536, 0.0529, 0.0421, 0.0382, 0.0419, 0.0494, 0.046, 0.0472, 0.0536, 0.0562, 0.051]\n",
+    "\n",
+    "paired_t_test(chi2,jmp)\n",
+    "t_test_1sample(chi2,0.05)\n",
+    "t_test_1sample(jmp,0.05)\n",
+    "print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "aab83d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paired difference:\n",
+      "   mean = 0.01\n",
+      "   stdev = 0.01\n",
+      "   t = 8.49\n",
+      "   df = 58.00\n",
+      "   Two-tailed test p=0.00\n",
+      "   %95 range of the difference's mean: (0.01, 0.01)\n",
+      "mean = 0.06\n",
+      "stdev = 0.01\n",
+      "t = 3.45\n",
+      "df = 58.00\n",
+      "Two-tailed test p=0.00\n",
+      "%95 range of population mean which the samples came from: (0.05, 0.06)\n",
+      "mean = 0.05\n",
+      "stdev = 0.02\n",
+      "t = -0.69\n",
+      "df = 58.00\n",
+      "Two-tailed test p=0.49\n",
+      "%95 range of population mean which the samples came from: (0.04, 0.05)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chi2=[0.0522, 0.0512, 0.0487, 0.095, 0.0898, 0.093, 0.055, 0.0522, 0.0491, 0.0812, 0.087, 0.0784, 0.0493, 0.0497, 0.0498, 0.075, 0.076, 0.0756, 0.0476, 0.0515, 0.0481, 0.0515, 0.0533, 0.0495, 0.0488, 0.0508, 0.0518, 0.0528, 0.0474, 0.0524, 0.0507, 0.052, 0.0513, 0.0468, 0.0539, 0.0526, 0.0468, 0.0527, 0.0522, 0.0497, 0.0492, 0.0497, 0.0526, 0.0504, 0.0508, 0.0527, 0.0474, 0.0506, 0.0519, 0.0497, 0.0522, 0.046, 0.0541, 0.0503, 0.0477, 0.0499, 0.0514, 0.0512, 0.0488]\n",
+    "jmp=[0.0405, 0.0395, 0.039, 0.098, 0.0968, 0.0933, 0.0445, 0.0414, 0.0409, 0.0824, 0.085, 0.0785, 0.0442, 0.0389, 0.0406, 0.0722, 0.0731, 0.0727, 0.0302, 0.0346, 0.0329, 0.0463, 0.0492, 0.0323, 0.0312, 0.0317, 0.0533, 0.0512, 0.0499, 0.0359, 0.0371, 0.0363, 0.0476, 0.0477, 0.0511, 0.0384, 0.0358, 0.0392, 0.051, 0.0519, 0.0501, 0.0364, 0.0402, 0.0382, 0.0448, 0.0478, 0.042, 0.04, 0.0402, 0.0382, 0.0479, 0.0462, 0.0495, 0.0421, 0.0382, 0.0419, 0.0494, 0.046, 0.0472]\n",
+    "paired_t_test(chi2,jmp)\n",
+    "t_test_1sample(chi2,0.05)\n",
+    "t_test_1sample(jmp,0.05)\n",
+    "print(\"\")"
    ]
   },
   {
@@ -103,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "id": "23a5c069",
    "metadata": {},
    "outputs": [
@@ -113,30 +201,30 @@
      "text": [
       "mean = 5.50\n",
       "stdev = 3.03\n",
-      "t = 2.26\n",
+      "t = 2.61\n",
       "df = 9.00\n",
-      "Two-tailed test p=0.05\n",
+      "Two-tailed test p=0.03\n",
       "%95 range of population mean which the samples came from: (3.33, 7.67)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'t': 2.263044342955263,\n",
-       " 'p': 0.049927548095949126,\n",
+       "{'t': 2.611164839335468,\n",
+       " 'p': 0.028216803759726572,\n",
        " 'df': 9,\n",
        " 'mean': 5.5,\n",
        " 'stdev': 3.0276503540974917,\n",
        " 'u0_95range': (3.3341494103866087, 7.665850589613392)}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t_test_1sample([1,2,3,4,5,6,7,8,9,10],3.3333)"
+    "t_test_1sample([1,2,3,4,5,6,7,8,9,10],3)"
    ]
   },
   {
