--- a/PPTX_and_stats/Chi-square.ipynb
+++ b/PPTX_and_stats/Chi-square.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "ab72217f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,144 @@
     "        print(\"df = %d\"%df)\n",
     "        print(\"Pearson P = %.2f\"%p)\n",
     "        \n",
-    "    return {\"p\":p,\"chi_sq\":chi_sq,\"df\":df}"
+    "    return {\"p\":p,\"chi_sq\":chi_sq,\"df\":df}\n",
+    "\n",
+    "# Results are same to JMP 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ff4a8664",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi_sq = 5.12\n",
+      "df = 1\n",
+      "Pearson P = 0.02\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'p': 0.023632563716661337, 'chi_sq': 5.121398499255355, 'df': 1}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=[[64,350-64],[22,200-22]]\n",
+    "chi_square(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "955fcbfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'p': 0.024522578979177645, 'chi_sq': 5.057288305376356, 'df': 1}\n",
+      "-0.0244842379990865\n",
+      "-0.012224472655044671\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 这个是日本书里面的一个例子。第五章3.1\n",
+    "# 书里面的例子是单组分类数据和期望不良率比较。\n",
+    "# 这里使用期望的不良率乘以很大的N产生假数据作为第二组分类数据\n",
+    "# 计算结果和书里一致（三位有效数字）\n",
+    "from scipy.stats import chi2\n",
+    "data=[[9,241],[18.25*10000,(250-18.25)*10000]]\n",
+    "print(chi_square(data,print_out=False))\n",
+    "print(chi2.cdf(5.06,1)-1)\n",
+    "print(norm.cdf(2.25)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b8f1631a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'p': 0.00021368570280067, 'chi_sq': 26.095700898725514, 'df': 6}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-0.00022074052654708076"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is the 5.4.2 in the JP book\n",
+    "data=[[98,120,82],[8,15,7],[23,11,36],[26,32,42]]\n",
+    "print(chi_square(data,print_out=False))\n",
+    "chi2.cdf(26.02,6)-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cea69c7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "402.99153628038255 40.296843410159205 0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-0.011603791521903495"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import t as t_test\n",
+    "n1=340\n",
+    "n2=200\n",
+    "u1=64\n",
+    "u2=22\n",
+    "p1=u1/n1\n",
+    "p2=u2/n2\n",
+    "s1=(p1*(1-p1)/n1)**.5\n",
+    "s2=(p2*(1-p2)/n2)**.5\n",
+    "u1=p1\n",
+    "u2=p2\n",
+    "t=(u1-u2)/(s1*s1/n1+s2*s2/n2)**.5\n",
+    "df=(s1*s1/n1+s2*s2/n2)**2/((s1*s1/n1)**2/(n1-1)+(s2*s2/n2)**2/(n2-1))\n",
+    "p=(1-t_test.cdf(abs(t),df))*2\n",
+    "print(df,t,p)\n",
+    "\n",
+    "from scipy.stats import norm\n",
+    "norm.cdf(2.27)-1"
    ]
   },
   {
