--- a/PPTX_and_stats/Chi-square.ipynb
+++ b/PPTX_and_stats/Chi-square.ipynb
@@ -172,6 +172,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "a2513f2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.1394563510797475"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2*(9*np.log(9/18.25)+241*np.log(241/(250-18.25)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "cea69c7b",
    "metadata": {},
