--- a/PPTX_and_stats/proportion test.ipynb
+++ b/PPTX_and_stats/proportion test.ipynb
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4cc0c43e",
+   "id": "1bb1e8db",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d34bda4d",
+   "id": "97fbf148",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7f3e4be",
+   "id": "45bf7707",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e3e26c7b",
+   "id": "19971c0c",
    "metadata": {},
    "source": [
     ">>> from scipy.stats import binom\n",
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6223df96",
+   "id": "e73cb921",
    "metadata": {},
    "outputs": [
     {
@@ -1341,8 +1341,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "71916cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2051284345196476"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "z=norm.ppf(.975)\n",
+    "p=9/250\n",
+    "(p + z**2/(2*n) - z*((p*(1-p) + z**2/(4*n))/n))**.5 / (1 + z**2/n)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "31d66d86",
+   "id": "c85ad860",
    "metadata": {},
    "outputs": [],
    "source": []
