--- a/cross/Find9cross.ipynb
+++ b/cross/Find9cross.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "25be690a",
+   "id": "c4fc18b7",
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24118d44",
+   "id": "d78dade3",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6b680358",
+   "id": "b5ba8dd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3301e1af",
+   "id": "6d3d03d5",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "42c9ab1c",
+   "id": "bb2b250a",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3f1083e3",
+   "id": "0a66094a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "af50bacf",
+   "id": "c2810f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "99231906",
+   "id": "acf0fd1b",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ddaa40ce",
+   "id": "66f38ec1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,8 +242,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "40d065f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(31858.0, 146, 346)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fsc[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
-   "id": "6410dbd5",
+   "id": "da489819",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0ed553ee",
+   "id": "1a6cc62b",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8af0a0db",
+   "id": "03a85e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,6 +391,140 @@
     "        if vis[y][x]>0:\n",
     "            blks[int(vis[y][x])-1].append((x,y))\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "48a86271",
+   "metadata": {},
+   "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <algorithm>\n",
+    "#include <numeric>\n",
+    "#include <cmath>\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "// Function to calculate the prefix sum array\n",
+    "void calculatePrefixSum(const vector<vector<double>>& a, vector<vector<double>>& s) {\n",
+    "    int H = a.size();\n",
+    "    int W = a[0].size();\n",
+    "    vector<double> s1(W + 1, 0.0);\n",
+    "\n",
+    "    for (int y = 0; y < H; ++y) {\n",
+    "        for (int x = 0; x < W; ++x) {\n",
+    "            s1[x + 1] = s1[x] + a[y][x];\n",
+    "            s[y + 1][x + 1] = s1[x + 1] + s[y][x + 1];\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Function to calculate the sum of a submatrix\n",
+    "double rec_sum(const vector<vector<double>>& s, int x1, int y1, int x2, int y2) {\n",
+    "    return s[y2][x2] - s[y1 - 1][x2] - s[y2][x1 - 1] + s[y1 - 1][x1 - 1];\n",
+    "}\n",
+    "\n",
+    "int main() {\n",
+    "    // Example input array\n",
+    "    vector<vector<double>> a = {\n",
+    "        {1, 2, 3},\n",
+    "        {4, 5, 6},\n",
+    "        {7, 8, 9}\n",
+    "    };\n",
+    "\n",
+    "    int H = a.size();\n",
+    "    int W = a[0].size();\n",
+    "\n",
+    "    vector<vector<double>> s(H + 1, vector<double>(W + 1, 0.0));\n",
+    "    calculatePrefixSum(a, s);\n",
+    "\n",
+    "    // Define the cross window\n",
+    "    int c_size = 15 - 1;\n",
+    "    int c_corner = 5 - 1;\n",
+    "\n",
+    "    vector<vector<double>> sc(H + 1, vector<double>(W + 1, 0.0));\n",
+    "\n",
+    "    for (int y = 1; y < H - c_size; ++y) {\n",
+    "        for (int x = 1; x < W - c_size; ++x) {\n",
+    "            int x2 = x + c_size;\n",
+    "            int y2 = y + c_size;\n",
+    "            double res = rec_sum(s, x, y, x2, y2);\n",
+    "            res -= rec_sum(s, x, y, x + c_corner, y + c_corner);\n",
+    "            res -= rec_sum(s, x2 - c_corner, y, x2, y + c_corner);\n",
+    "            res -= rec_sum(s, x, y2 - c_corner, x + c_corner, y2);\n",
+    "            res -= rec_sum(s, x2 - c_corner, y2 - c_corner, x2, y2);\n",
+    "            sc[y][x] = res;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Calculate the threshold\n",
+    "    vector<double> flat_sc;\n",
+    "    for (int y = 1; y < H; ++y) {\n",
+    "        for (int x = 1; x < W; ++x) {\n",
+    "            flat_sc.push_back(sc[y][x]);\n",
+    "        }\n",
+    "    }\n",
+    "    sort(flat_sc.begin(), flat_sc.end());\n",
+    "    double thd = flat_sc[static_cast<int>(0.98 * flat_sc.size())];\n",
+    "\n",
+    "    vector<tuple<double, int, int>> fsc;\n",
+    "    for (int y = 1; y < H; ++y) {\n",
+    "        for (int x = 1; x < W; ++x) {\n",
+    "            fsc.emplace_back(sc[y][x], x, y);\n",
+    "        }\n",
+    "    }\n",
+    "    sort(fsc.begin(), fsc.end());\n",
+    "\n",
+    "    vector<vector<int>> vis(H + 1, vector<int>(W + 1, 0));\n",
+    "    int idx = fsc.size() - 1;\n",
+    "    int cnt = 0;\n",
+    "    vector<int> dx = {-1, 0, 0, 1};\n",
+    "    vector<int> dy = {0, 1, -1, 0};\n",
+    "\n",
+    "    while (cnt < 9) {\n",
+    "        while (true) {\n",
+    "            auto [_, x, y] = fsc[idx];\n",
+    "            if (vis[y][x] == 0) {\n",
+    "                break;\n",
+    "            }\n",
+    "            idx--;\n",
+    "        }\n",
+    "        vector<pair<int, int>> stack = {{get<1>(fsc[idx]), get<2>(fsc[idx])}};\n",
+    "        cnt++;\n",
+    "        while (!stack.empty()) {\n",
+    "            auto [x, y] = stack.back();\n",
+    "            stack.pop_back();\n",
+    "            vis[y][x] = cnt;\n",
+    "            for (int i = 0; i < 4; ++i) {\n",
+    "                int xx = x + dx[i];\n",
+    "                int yy = y + dy[i];\n",
+    "                if (vis[yy][xx] == 0 && sc[yy][xx] > thd) {\n",
+    "                    stack.emplace_back(xx, yy);\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    vector<vector<pair<int, int>>> blks(9);\n",
+    "    for (int y = 1; y < H; ++y) {\n",
+    "        for (int x = 1; x < W; ++x) {\n",
+    "            if (vis[y][x] > 0) {\n",
+    "                blks[vis[y][x] - 1].emplace_back(x, y);\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Output the blocks\n",
+    "    for (int i = 0; i < 9; ++i) {\n",
+    "        cout << \"Block \" << i + 1 << \":\\n\";\n",
+    "        for (const auto& [x, y] : blks[i]) {\n",
+    "            cout << \"(\" << x << \", \" << y << \")\\n\";\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    return 0;\n",
+    "}\n"
    ]
   }
  ],
