--- a/PPTX_and_stats/Seaborn.ipynb
+++ b/PPTX_and_stats/Seaborn.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5ab15faf",
+   "id": "fad0ee1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "73e3f6de",
+   "id": "91326f18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a52d1b5a",
+   "id": "74c5245e",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1cc487d4",
+   "id": "69c5d9ba",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8ad415e1",
+   "id": "8b2bfa41",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b84bb9d0",
+   "id": "749e5794",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7709fdac",
+   "id": "58f4132c",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "060ac02a",
+   "id": "dbf01f9f",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "5183dc5e",
+   "id": "51869376",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f7fe0f76",
+   "id": "11ea3e58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "52c25e79",
+   "id": "cc61d0a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ee65a941",
+   "id": "e5d338c1",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "bc973e9a",
+   "id": "f28380a8",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "8c555a43",
+   "id": "e4e613a5",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b119aee7",
+   "id": "7814a00e",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "4b8cf183",
+   "id": "8ae3d21b",
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "c3bcac44",
+   "id": "ce21842d",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "5b535067",
+   "id": "4f67ad7c",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "e58a8b0d",
+   "id": "57be0bde",
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "148226b3",
+   "id": "e5d207a9",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "a2120f21",
+   "id": "d85041cc",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "f8de8605",
+   "id": "29273df9",
    "metadata": {},
    "outputs": [
     {
@@ -1233,8 +1233,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 192,
+   "id": "17aedb3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrap Standard Error of the Standard Deviation: 0.5458304928827773\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Original data\n",
+    "data = [\n",
+    "    59, 61, 55, 66, 52, 60, 61, 51, 60, 61, 56, 65, 63, 58, 59, 61, 62, 65, 63, 62,\n",
+    "    63, 64, 65, 64, 68, 64, 69, 62, 64, 67, 65, 66, 62, 66, 65, 60, 68, 62, 68, 70\n",
+    "]\n",
+    "\n",
+    "# Number of bootstrap samples\n",
+    "B = 10000\n",
+    "\n",
+    "# Store standard deviations of bootstrap samples\n",
+    "bootstrap_std_devs = []\n",
+    "\n",
+    "# Perform bootstrapping\n",
+    "for _ in range(B):\n",
+    "    # Resample with replacement\n",
+    "    bootstrap_sample = np.random.choice(data, size=len(data), replace=True)\n",
+    "    # Calculate standard deviation of the bootstrap sample\n",
+    "    bootstrap_std_dev = np.std(bootstrap_sample, ddof=1)\n",
+    "    bootstrap_std_devs.append(bootstrap_std_dev)\n",
+    "\n",
+    "# Calculate the bootstrap standard error of the standard deviation\n",
+    "bootstrap_se_std_dev = np.std(bootstrap_std_devs, ddof=1)\n",
+    "\n",
+    "print(f\"Bootstrap Standard Error of the Standard Deviation: {bootstrap_se_std_dev}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "c4add239",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 2])"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice([1,2,3],size=3,replace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3f8338c7",
+   "id": "cbeb763c",
    "metadata": {},
    "outputs": [],
    "source": []
